Fix weird overlap that occurred when a field note and a swat-message appeared together in a form field. Also pulled over some css from swat-form-field.css that was more up-to-date.
git-svn-id: file:///Users/gauthierm/svnrepo/swat/trunk@7265 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/swat-message.css
+++ b/www/styles/swat-message.css
@@ -58,11 +58,15 @@
 	color: #C00;
 	font-size: 85%;
 	padding: 4px 4px 4px 24px;
-	margin: 1em -0.5em -0.5em -0.5em;
+	margin: 0.5em 0 0 0;
 	background: transparent url(../images/tango/16/dialog-error.png) 4px 4px no-repeat;
+}
+* html .swat-form-field-messages .swat-message  { /* IE hack */
+	background: transparent url(../images/tango/16/dialog-error-256.png) 4px 4px no-repeat;
 }
 
 .swat-form-field-with-messages {
+	position: relative;
 	border: 1px solid #C00;
 	background: #ffe3e0;
 	padding: 0.5em;
